--- a/docker/Dockerfile.dev
+++ b/docker/Dockerfile.dev
@@ -8,4 +8,4 @@ ADD go.mod go.sum ./
 
 RUN go mod download
 
-ENTRYPOINT /bin/wait-for postgres-dev:5432 -- /bin/sh -c "yarn install --no-progress && buffalo pop migrate && buffalo dev"
+ENTRYPOINT /bin/wait-for postgres-dev:5432 -- /bin/sh -c "buffalo pop migrate && buffalo dev"
