--- a/docker/Dockerfile.test
+++ b/docker/Dockerfile.test
@@ -8,4 +8,6 @@ ADD go.mod go.sum ./
 
 RUN go mod download
 
-ENTRYPOINT /bin/wait-for postgres-test:5432 -- /bin/sh -c "yarn install --no-progress && ls -la && pws && buffalo test"
+ADD . .
+
+ENTRYPOINT /bin/wait-for postgres-test:5432 -- buffalo test
