--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -42,3 +42,23 @@ services:
       - TEST_DATABASE_URL="postgres://postgres:postgres@postgres-test:5432/test?sslmode=disable"
     depends_on:
       - postgres-test
+  ensure-repo:
+    build:
+      context: ..
+      dockerfile: docker/Dockerfile.deploy
+    entrypoint: sh -c "terraform init && terraform apply -auto-approve -target aws_ecr_repository.repo"
+    environment:
+      - AWS_CONTAINER_CREDENTIALS_RELATIVE_URI
+      - AWS_EXECUTION_ENV
+      - AWS_SECRET_ACCESS_KEY
+      - AWS_ACCESS_KEY_ID
+  deploy:
+    build:
+      context: ..
+      dockerfile: docker/Dockerfile.deploy
+    entrypoint: sh -c "terraform init && terraform apply -auto-approve"
+    environment:
+      - AWS_CONTAINER_CREDENTIALS_RELATIVE_URI
+      - AWS_EXECUTION_ENV
+      - AWS_SECRET_ACCESS_KEY
+      - AWS_ACCESS_KEY_ID
